update boston report

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** We need sufficient nubmer of train data to train model. On the same time we need to have test set to validate model and get mean squared error."
+    "**Answer: ** We need sufficient nubmer of train data to train model. Using training data we create model. But to evaluate and find sweet spot we need to have test data as well. This gives us a quality metric and we can decide is the model good or bad. Test data helps us select pick the model with the best accuracy."
    ]
   },
   {
@@ -327,6 +327,15 @@
     "\n",
     "Run the code cell below and use these graphs to answer the following question."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -374,7 +383,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "Graph with max_depth=3, the more training points are added the score dropes. On the same time testing score increase. More training points can lead to overfitting (high variance). But we need to generalize model."
+    "Graph with max_depth=3, the more training points are added the score dropes. On the same time testing score increase. As we add more data points the error decrease. We can find that at some point more data doesn't show good performance. So we can converge at this test size. As we see in graph after 300 training points performance is small."
    ]
   },
   {
@@ -422,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** The model trained with a maximum depath of 1 has high bias. In oposite the model with max depth 10 has high variance. The best max depth is 3 or 4."
+    "**Answer: ** The model trained with a maximum depath of 1 has high bias. In oposite the model with max depth 10 has high variance. The best max depth is 3 or 4. Max depth 1 shows small score on the graph. Max depth 10 shows big difference between training score and test score."
    ]
   },
   {
@@ -478,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** K-fold split data for k data buckets. Applies K learnings, where one bucket is for testing and K-1 are for trainging. Each bucket will have data_size / K. Using cross-validation we can find better model. Also it's good if we have small data set."
+    "**Answer: ** K-fold split data for k data buckets. Applies K learnings, where one bucket is for testing and K-1 are for trainging. Each bucket will have data_size / K. Using cross-validation we can find better model. At the end grid search collect all errors rates and pick the model with the smallest one. Also it's good if we have small data set. Crossvalidation for grid search is good that we can run it with different parameters and easely change them."
    ]
   },
   {
@@ -506,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -613,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -626,6 +635,88 @@
       "Predicted selling price for Client 2's home: $233,800.00\n",
       "Predicted selling price for Client 3's home: $939,225.00\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.240288</td>\n",
+       "      <td>12.939632</td>\n",
+       "      <td>18.516564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.643650</td>\n",
+       "      <td>7.081990</td>\n",
+       "      <td>2.111268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.561000</td>\n",
+       "      <td>1.980000</td>\n",
+       "      <td>12.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.880000</td>\n",
+       "      <td>7.370000</td>\n",
+       "      <td>17.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.185000</td>\n",
+       "      <td>11.690000</td>\n",
+       "      <td>19.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.575000</td>\n",
+       "      <td>17.120000</td>\n",
+       "      <td>20.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.398000</td>\n",
+       "      <td>37.970000</td>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RM       LSTAT     PTRATIO\n",
+       "count  489.000000  489.000000  489.000000\n",
+       "mean     6.240288   12.939632   18.516564\n",
+       "std      0.643650    7.081990    2.111268\n",
+       "min      3.561000    1.980000   12.600000\n",
+       "25%      5.880000    7.370000   17.400000\n",
+       "50%      6.185000   11.690000   19.100000\n",
+       "75%      6.575000   17.120000   20.200000\n",
+       "max      8.398000   37.970000   22.000000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -636,7 +727,9 @@
     "\n",
     "# Show predictions\n",
     "for i, price in enumerate(reg.predict(client_data)):\n",
-    "    print \"Predicted selling price for Client {}'s home: ${:,.2f}\".format(i+1, price)"
+    "    print \"Predicted selling price for Client {}'s home: ${:,.2f}\".format(i+1, price)\n",
+    "\n",
+    "features.describe()"
    ]
   },
   {
@@ -644,9 +737,9 @@
    "metadata": {},
    "source": [
     "**Answer: ** \n",
-    "Client 1: \\$408,030.00  this is good price. Median is a littel bit less.\n",
-    "Client 2: \\$233,800.00  this price is small.\n",
-    "Client 3: \\$939,225.00  this price is expensive.\n",
+    "Client 1: \\$408,030.00  this is good price. Median is a littel bit less. We have less the RM mean count. Good LSTAT (mean is 12.93). PTRATIO seem also low.\n",
+    "Client 2: \\$233,800.00  this price is small. Because poverty level is high and student-teach level is also high.\n",
+    "Client 3: \\$939,225.00  this price is expensive. Because it's expensive district (poverty level low) and has good student-teacher lever.\n",
     "The prices seems reasonable."
    ]
   },
@@ -706,7 +799,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "The infrastucture of the city changes fast. Real estate very fast response to each changies. Model of 1978 year is irrelevant for current situation. Probably we need more features to predict better (like bathrooms count, garden...). The model shows consistent predictions for 1978 year. The model can only applied to Boston."
+    "The infrastucture of the city changes fast. Real estate very fast response to each changies. Model of 1978 year is irrelevant for current situation. Probably we need more features to predict better (like bathrooms count, garden...). The model shows consistent predictions for 1978 year. The model can only applied to Boston and could not be used for real-world settings. We need get last data and probably add more relevant features."
    ]
   },
   {
