--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** We need sufficient nubmer of train data to train model. Using training data we create model. But to evaluate and find sweet spot we need to have test data as well. This gives us a quality metric and we can decide is the model good or bad. Test data helps us select pick the model with the best accuracy."
+    "**Answer: ** We need sufficient number of train data to train model. Using training data we create model. But to evaluate and find sweet spot we need to have test data as well. This gives us a quality metric and we can decide is the model good or bad. Test data helps us select pick the model with the best accuracy. If we use the the same data to train and test model we will not get good performance validation metric. Becuase we usually want to validate real-word scenaria. We need to have data set that our model doesn't know. So we spilt our data set for two independent sets."
    ]
   },
   {
@@ -487,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** K-fold split data for k data buckets. Applies K learnings, where one bucket is for testing and K-1 are for trainging. Each bucket will have data_size / K. Using cross-validation we can find better model. At the end grid search collect all errors rates and pick the model with the smallest one. Also it's good if we have small data set. Crossvalidation for grid search is good that we can run it with different parameters and easely change them."
+    "**Answer: ** K-fold split data for k data buckets and make K folds. Applies K learnings (iterations), where one bucket is for testing and K-1 are for trainging. Each bucket will have data_size / K. Using cross-validation we can find better model. Because our model is trained with K different data sets and test with K sets as well. At the end grid search collect all errors rates and pick the model with the smallest one. Also it's good if we have small data set, because we will train and test in defferent data sets and select best model. Crossvalidation for grid search is good that we can run it with different parameters and easely change them. If we do grid-search only on train and test set, it might be that our performance will be less attractive. Data are distributed randomly and we can't garanty what some data will fit for training and another for testing. K-fold helps us to eliminate this."
    ]
   },
   {
