--- a/projects/finding_donors/finding_donors.ipynb
+++ b/projects/finding_donors/finding_donors.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +156,7 @@
       "Total number of records: 45222\n",
       "Individuals making more than $50,000: 11208\n",
       "Individuals making at most $50,000: 34014\n",
-      "Percentage of individuals making more than $50,000: 24.00%\n"
+      "Percentage of individuals making more than $50,000: 24.78%\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
     "n_at_most_50k = len( data[ data['income'] == '<=50K' ] )\n",
     "\n",
     "# TODO: Percentage of individuals whose income is more than $50,000\n",
-    "greater_percent = float(100 * n_greater_50k / n_records )\n",
+    "greater_percent = 100 * float( n_greater_50k ) / n_records\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of records: {}\".format(n_records)\n",
@@ -752,7 +752,7 @@
    "metadata": {},
    "source": [
     "**Answer: ** \n",
-    "We choose SGD algorithm because it shows the good prediction. It better generalizes our data. SGD better process corner cases where we have uncertainties of person income (income is around $50,0000). SGD select the random subset of our data and try to predict results. Next step it compares our result with actual result and make adjustments accordingly. We repeat it until we succeed with the result (converge)."
+    "We choose SGD algorithm because it shows the good prediction. It better generalizes our data. SGD better process corner cases where we have uncertainties of person income (income is around $50,0000). SGD splits data linearly. Takes features about individuals whose census data is known (e.g., age, gender, etc) and creates a model that assigns a \"weight\" to these features that assess their importance in determining whether the individual has income over 50k or not. To get weight we need to train model. We have labeled data and use them to teach our model. The algorithm selects the random subset of our data and tries to predict results. Next step it compares predicted result with actual result and makes weights adjustments accordingly. We repeat it until we succeed with the result (converge)."
    ]
   },
   {
