--- a/projects/customer_segments/customer_segments.ipynb
+++ b/projects/customer_segments/customer_segments.ipynb
@@ -350,11 +350,11 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "I've created a heatmap to visualize the amount of spending:\n",
+    "I've created a heatmap to visualize the amount of spending.\n",
     "\n",
-    "0. This customer spent less then the median on fresh food. Above the median for milk, grocery and Detergents_Paper. Under the median for frozen. Right around the median on delicatessen. I guest he uses restaurants, cafe.\n",
-    "1. This customer spent less then the median on fresh food and milk. Above the median for grocery, frozen and Detergents_Paper. Right around the median on delicatessen. Cafe, Restaurants, fast food, \n",
-    "3. This customer spent above the median fresh and Detergents_Paper. Under the median for milk, frozen and delicatessen. Little under the median grocery. Local markets."
+    "* Customer 0: This customer spent more than 75% of all customer on milk, grocery, Detergents_Paper and delicatessen. Less than 50% of all customers on fresh food and frozen. I guest it's restaurants, cafe.\n",
+    "* Customer 1: This customer spent more than 75% of all customer on grocery, frozen and Detergents_Paper. Same as 25% of all customers 75% on delicatessen. Same as 25% on fresh products and less than 25% of all customers on milk. I guest it's fast food restaurants. \n",
+    "* Customer 2: This customer spent more than 50% of all customers on milk and grocery. Same as 75% of customer on fresh products. Less than 25% of customers on frozen and delicatessen. More than 75% of customers to Detergents_Paper. I guest it's local markets."
    ]
   },
   {
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -2141,7 +2141,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "The distribution will not effect all customers equally. It's affect mostly customers who are used to make purchases often and delivery are critical for them. Also we can assume what such group of people buys very specific group of the products. The customers who make big purchase one per week will react positively. We have 3 customer segments. We run 3 A/B tests for each group of customers. From each group we can take 5% of customers and run A/B test for them. Collect feedback and do next test with another group."
+    "The distribution will not effect all customers equally. It's affect mostly customers who are used to make purchases often and delivery are critical for them. Also we can assume what such group of people buys very specific group of the products. The customers who make big purchase one per week will react positively. We have 2 customer segments. We run 2 A/B tests for each group of customers. From each group we can take 5% of customers and run A/B test for them. Collect feedback and do next test with another group."
    ]
   },
   {
@@ -2210,7 +2210,7 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "The clustering algorithm split data very good. However, for me, it was hard to tell which cluster belongs to what establishment. Because I used 3 clusters, retailers are split into two clusters. Also, there is uncertainty in the middle between HoReCa and Retailer segment. Clustering algorithm could not find such details. My classification is not consistent because I set labels manually and it was my guess why customer need such menu products."
+    "The clustering algorithm split data very good. However, for me, it was hard to tell which cluster belongs to what establishment. There is uncertainty in the middle between HoReCa and Retailer segment. Clustering algorithm could not find such details. My classification is not consistent because I set labels manually and it was my guess why customer need such menu products."
    ]
   },
   {
