--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -540,7 +540,9 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "Using gamma it will reward as mutch as current reward. Gamma link action with the previous state. But we have local situation on the road and observ only given situation. In this case the learning doesn't work at that well. So we use gamma=0 and make decision based on current situation."
+    "Using gamma it will reward as mutch as current reward. Gamma link action with the previous state. But we have local situation on the road and observ only given situation. In this case the learning doesn't work at that well. So we use gamma=0 and make decision based on current situation.\n",
+    "\n",
+    "E"
    ]
   },
   {
